# examples

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  Project.toml  README.md  appveyor.yml  breast-cancer-wisconsin-pca-cpp.ipynb  contact-tracing-dbscan-cpp.ipynb  covertype-rf-cpp.ipynb  covertype-rf-py.ipynb  download_data_set.py  download_data_set.sh  fix_style.sh  gmon.out  install.sh  iris-pca-cpp.ipynb  iris-pca-py.ipynb  mlpack-cmake.patch  mnist-cnn-cpp.ipynb
.ci/: ci.yaml  linux-steps.yaml  (+1 more)
Kaggle/DigitRecognizer/: CMakeLists.txt  DigitRecognizer.cpp
Kaggle/DigitRecognizer/src/: DigitRecognizer.cpp  DigitRecognizerBatchNorm.cpp
Kaggle/DigitRecognizer/src/CNN/: CMakeLists.txt  CNN.cpp
Kaggle/DigitRecognizer/src/FFN/: CMakeLists.txt  FFN.cpp
Kaggle/DigitRecognizerBatchNorm/: CMakeLists.txt
Kaggle/DigitRecognizerBatchNorm/src/: DigitRecognizerBatchNorm.cpp
LSTM/Sentiment-Analysis/: CMakeLists.txt  tutorial.txt
LSTM/Sentiment-Analysis/src/: LSTMSentimentAnalysis.cpp
LSTM/TimeSeries-Univariate/: CMakeLists.txt  tutorial.txt
LSTM/TimeSeries-Univariate/src/: LSTMTimeSeriesUnivariate.cpp
VGG19/vgg19_mnist/: CMakeLists.txt  tutorial.txt
VGG19/vgg19_mnist/src/: VGG19.hpp  VGG19_impl.hpp  model.cpp
VGG19/vgg19_tiny_imagenet/: CMakeLists.txt  tutorial.txt
VGG19/vgg19_tiny_imagenet/src/: dataloader.cpp  dataloader.hpp  dataloader_impl.hpp  load.cpp  model.cpp
binder/: start  (+6 more)
embedded/crosscompile_random_forest/: CMakeLists.txt  main.cpp
embedded/embedded_cmake_template/: CMakeLists.txt  README.md  main.cpp
examples/: CMakeLists.txt
examples/avocado_price_prediction_with_linear_regression/: README.md
examples/breast_cancer_wisconsin_transformation_with_pca/: README.md
examples/california_housing_price_prediction_with_linear_regression/: README.md
examples/california_housing_price_prediction_with_linear_regression/CPP/: california_housing_price_prediction_with_lr_cpp.ipynb
examples/california_housing_price_prediction_with_linear_regression/python/: California_housing_prices_predictions_with_lr_python.ipynb
examples/cifar10_cnn/: README.md
examples/cifar10_cnn/CPP/: cifar_eval.cpp  cifar_train.cpp
examples/cifar10_cnn/cpp/: cifar_eval.cpp  cifar_train.cpp
examples/cifar10_transformation_with_pca/: README.md  cifar-10-pca-cpp.ipynb
examples/contact_tracing_clustering_with_dbscan/: README.md  contact-tracing-dbscan-cpp.ipynb
examples/dominant-colors-with-kmeans/: README.md
examples/dominant-colors-with-kmeans/cpp/: dominant-colors-kmeans-cpp.ipynb
examples/forest_covertype_prediction_with_random_forests/: README.md  covertype-rf-cpp.ipynb
examples/graduate_admission_classification_with_Adaboost/: README.md
examples/loan_default_prediction_with_decision_tree/: README.md
examples/loan_default_prediction_with_decision_tree/Python/: loan-default-prediction-with-decision-tree-py.ipynb
examples/lstm_electricity_consumption/: README.md
examples/lstm_electricity_consumption/CPP/: lstm_electricity_consumption.cpp
examples/lstm_stock_prediction/: README.md
examples/lstm_stock_prediction/CPP/: Makefile  lstm_stock_prediction.cpp
examples/lstm_stock_prediction/cpp/: lstm_multivariate_time_series_prediction.ipynb
examples/microchip_quality_control_naive_bayes/: README.md
examples/mnist_batch_norm/: README.md
examples/mnist_batch_norm/CPP/: mnist_batch_norm  mnist_batch_norm.cpp
examples/mnist_batch_norm/cpp/: mnist_batch_norm.cpp
examples/mnist_cnn/: README.md
examples/mnist_cnn/CPP/: mnist_cnn.cpp
examples/mnist_cnn/cpp/: mnist_cnn.cpp
examples/mnist_simple/: README.md  mnist_simple.cpp
examples/mnist_simple/CPP/: mnist_simple.cpp
examples/mnist_tutorial/: CMakeLists.txt  mnist_tutorial_cnn.cpp  mnist_tutorial_nn.cpp
examples/mnist_vae_cnn/: README.md  vae_generate.cpp
examples/mnist_vae_cnn/CPP/: mnist_vae_cnn.cpp  vae_generate.cpp
examples/mnist_vae_cnn/cpp/: Makefile  mnist_vae_cnn.cpp
examples/movie_lens_prediction_with_cf/: README.md
examples/neural_network_regression/: README.md
examples/neural_network_regression/CPP/: nn_regression.cpp
examples/neural_network_regression/cpp/: neural_network_regression.ipynb  nn_regression.cpp
examples/pima_indians_diabetes_clustering_with_kmeans/: README.md
examples/pima_indians_diabetes_clustering_with_kmeans/cpp/: pima-indians-diabetes-kmeans-cpp.ipynb
examples/portfolio_optimization/: README.md  portfolio-optimization-cpp.ipynb
examples/portfolio_optimization/cpp/: portfolio-optimization-cpp.ipynb
examples/rainfall_prediction_with_random_forest/: README.md
examples/rainfall_prediction_with_random_forest/CPP/: rainfall-prediction-with-random-forest-cpp.ipynb
examples/reinforcement_learning_gym/: README.md
examples/reinforcement_learning_gym/bipedal_walker_sac/: Makefile
examples/reinforcement_learning_gym/bipedal_walker_sac/CPP/: bipedal_walker_sac.ipynb
examples/reinforcement_learning_gym/cartpole_dqn/: cartpole_dqn.cpp
examples/salary_prediction_with_linear_regression/: README.md  salary-prediction-linear-regression-cpp.ipynb
examples/spam/CLI/: spam_classification.sh
examples/student_admission_regression_with_logistic_regression/: README.md
examples/student_admission_regression_with_logistic_regression/CPP/: student-admission-logistic-regression-cpp.ipynb
examples/time_series_tutorial/: CMakeLists.txt  electricity_consumption_tutorial.cpp  google_stock_price_tutorial.cpp
jupyter_notebook/reinforcement_learning_gym/gym/: CMakeLists.txt  example.cpp  monitor.hpp  parser.hpp  parser_impl.hpp  space.hpp
models/: CMakeLists.txt  alexnet.hpp  alexnet_impl.hpp  resnet.hpp  resnet_impl.hpp
models/lenet/: CMakeLists.txt  lenet.hpp  lenet_impl.hpp
models/lstm/: CMakeLists.txt  simple_lstm.hpp  simple_lstm_impl.hpp
models/simple_nn/: CMakeLists.txt  simple_nn.hpp  simple_nn_impl.hpp
samples/: CMakeLists.txt  object_classification.cpp  vgg16_mnist.cpp
vae/vae_cnn_mnist/: CMakeLists.txt
vae/vae_cnn_mnist/src/: vae_cnn.cpp
vae/vae_mnist/: CMakeLists.txt
vae/vae_mnist/src/: vae.cpp
(+361 files in other folders)
